Fixed spacing of footer

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     padding: 0;
     line-height: 1.75;
     background-color: white;
+    width: 100vw;
 }
 
 button {
@@ -64,7 +65,8 @@ details {
 }
 
 footer {
-    width: 100vw;
+    display: flex;
+    padding: 100px 10px 20px 10px;
 }
 
 h1 {
@@ -185,6 +187,5 @@ ul, ol {
 /*** IDS ***/
 
 #copyright {
-    width: 100%;
-    padding: 10px;
+    margin: auto;
 }
